Correct the low contrast in the logo

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
   font-weight: 700;
   font-size: 1.12em;
   line-height: 1.25rem;
-  color: #6070ff;
+  color: #272e6f;
   text-decoration: none;
   transform: rotate(360deg);
   transition-duration: 3s;
